feat: Implement volume discount configuration and management
- Added loader and action functions to handle fetching and saving discount settings from shop metafields.
- Updated the main index component to include product selection, discount percentage, and quantity input fields.
- Integrated Shopify Polaris components for better UI/UX.
- Created a new API route for saving discount configurations.
- Developed a new Discounts component for managing discount settings.
- Enhanced the run function in the discount function extension to apply discounts based on quantity and selected products.
- Updated Liquid template to display volume discount messages on product pages.
- Adjusted package dependencies to include Shopify Polaris.
- Modified shopify.app.toml to include necessary access scopes for discounts.

--- a/extensions/volume-discount-fn/shopify.extension.toml
+++ b/extensions/volume-discount-fn/shopify.extension.toml
@@ -3,7 +3,7 @@ api_version = "2025-01"
 [[extensions]]
 name = "t:name"
 handle = "volume-discount-fn"
-type = "function"
+type = "product_discounts"
 uid = "765ae274-2507-da32-0bc8-186fd0ef0505e19418b4"
 description = "t:description"
 
